--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
             <div class="wrapper clearfix">
                 <h2>Our New Friends</h2>
                 <ul class="clearfix">
-                    <li><img src="./assets/gallery-image-1@2x.png" alt="FILL THIS IN"></li>
-                    <li><img src="./assets/gallery-image-2@2x.png" alt="FILL THIS IN"></li>
-                    <li><img src="./assets/gallery-image-3@2x.png" alt="FILL THIS IN"></li>
+                    <li class="left"><img src="./assets/gallery-image-1@2x.png" alt="FILL THIS IN"></li>
+                    <li class="right"><img src="./assets/gallery-image-2@2x.png" alt="FILL THIS IN"></li>
+                    <li class="base"><img src="./assets/gallery-image-3@2x.png" alt="FILL THIS IN"></li>
                 </ul>
 
                 <div class="friendImgContainer">
@@ -55,7 +55,9 @@
                 <div class="friendContentContainer">
                     <h2>More about our park</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem sapiente itaque totam numquam deleniti voluptates expedita aspernatur accusantium a! Asperiores nisi ea, dolor repellendus saepe cum optio enim, repellat ab tenetur pariatur unde eos ad? Nemo sunt, est sint maiores optio laudantium molestias accusantium fugit vel aliquam vero esse, nostrum, voluptates impedit quos recusandae architecto obcaecati aperiam voluptatum. Laborum perspiciatis quidem nobis! Quas quia voluptates consequatur ut mollitia nulla laudantium.</p>
+                    <div class="friendButtonContainer">
                     <button>READ MORE</button>
+                    </div>
                 </div>
             </div>
         </section>
@@ -121,12 +123,14 @@
                     <form action="#">
                         <input type="email" id="email" name="email" placeholder="email address">
                     </form>
+                    <div class="contactButtonContainer">
                     <button class="button">SUBSCRIBE</button>
+                    </div>
                 </div>
                 
                 <div class="contactContactContainer">
                     <h3>Contact</h3>
-                    <p>info@email.com 123 - 456 - 7890</p>
+                    <p class="break">info@email.com 123 - 456 - 7890</p>
                     <p>123 some road, Toronto, ON</p>
                     <p>A5A 5A5, Canada</p>
                 </div>
