Added Hamburger Menu, Alt Text, Centered placeholder text

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
                         <li><a href="">Contact</a></li>
                     </ul>
                 </nav>
+                <div class="hamburgerMenu">
+                    <div></div>
+                </div>
             </div>
         </div>
         <div class="wrapper">
@@ -44,13 +47,13 @@
             <div class="wrapper clearfix">
                 <h2>Our New Friends</h2>
                 <ul class="clearfix">
-                    <li class="left"><img src="./assets/gallery-image-1@2x.png" alt="FILL THIS IN"></li>
-                    <li class="right"><img src="./assets/gallery-image-2@2x.png" alt="FILL THIS IN"></li>
-                    <li class="base"><img src="./assets/gallery-image-3@2x.png" alt="FILL THIS IN"></li>
+                    <li class="left"><img src="./assets/gallery-image-1@2x.png" alt="Panda with vegetables in its mouth"></li>
+                    <li class="right"><img src="./assets/gallery-image-2@2x.png" alt="Panda staring to the left"></li>
+                    <li class="base"><img src="./assets/gallery-image-3@2x.png" alt="Panda biting another panda"></li>
                 </ul>
 
                 <div class="friendImgContainer">
-                    <img src="./assets/small-box@2x.png" alt="">
+                    <img src="./assets/small-box@2x.png" alt="Panda with one leg raised">
                 </div>
                 <div class="friendContentContainer">
                     <h2>More about our park</h2>
@@ -63,17 +66,9 @@
         </section>
 
         <section class="panda clearfix">
-            <!-- <div class="wrapper">
-                <div class="pandaContentContainer one">
-                    <h2>Bobby and Bella</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum, reiciendis. Facere laboriosam itaque incidunt culpa laudantium aliquid, alias natus nulla facilis cum dolorem? Voluptatum minima unde numquam error, quo consectetur, amet id ea a nemo harum.</p>
-                    <button>READ MORE</button>
-                </div>
-            </div> -->
         
-
             <div class="pandaImgContainer one">
-                <img src="./assets/pascal-muller-4-eaj-iu-uxg-aq-unsplash@2x.png" alt="">
+                <img src="./assets/pascal-muller-4-eaj-iu-uxg-aq-unsplash@2x.png" alt="Two baby pandas">
             </div>
 
             <div class="wrapper clearfix">
@@ -85,7 +80,7 @@
             </div>
 
             <div class="pandaImgContainer two">
-                <img src="./assets/debbie-molle-6-dsid-8-ey-9-u-unsplash-1@2x.png" alt="">
+                <img src="./assets/debbie-molle-6-dsid-8-ey-9-u-unsplash-1@2x.png" alt="Panda with plant in its mouth">
             </div>
 
             <div class="wrapper clearfix">
